--- a/tiktokavaliacao/index.html
+++ b/tiktokavaliacao/index.html
@@ -729,7 +729,7 @@
 
 											const params = new URLSearchParams(window.location.search);
 											const queryString = params.toString();
-											const baseUrl = 'https://lucrecomaopiniao.shop/tiktok1'; // Defina a URL base
+											const baseUrl = 'https://novidadesdigital.pages.dev/tiktokavaliacao/tiktok1'; // Defina a URL base
 
 											console.log('Base URL:', baseUrl);
 											console.log('Query String:', queryString);
