--- a/tiktokavaliacao/TIKTOK3/index.html
+++ b/tiktokavaliacao/TIKTOK3/index.html
@@ -398,7 +398,7 @@ function startCounter(targetValue) {
 
 function playSound() {
     if (!soundPlayed) {
-        const audio = new Audio('https://lucrecomaopiniao.shop/venda/venda/cash.mp3');
+        const audio = new Audio('https://novidadesdigital.pages.dev/tiktokavaliacao/venda/venda/cash.mp3');
         audio.play();
         soundPlayed = true;
     }
@@ -435,7 +435,7 @@ function triggerConfetti() {
 }
 
 // Pré-carregar o som
-const audio = new Audio('https://lucrecomaopiniao.shop/venda/venda/cash.mp3');
+const audio = new Audio('https://novidadesdigital.pages.dev/tiktokavaliacao/venda/venda/cash.mp3');
 audio.preload = 'auto';
 
 // Adicionar evento de clique ao botão "Continuar"
