--- a/TIKTOK1/index.html
+++ b/TIKTOK1/index.html
@@ -389,7 +389,7 @@ function startCounter(targetValue) {
 
 function playSound() {
     if (!soundPlayed) {
-        const audio = new Audio('https://novidadesdigital.pages.dev/TIKTOK2/venda/venda/cash.mp3');
+        const audio = new Audio('https://novidadesdigital.pages.dev/TIKTOK2');
         audio.play();
         soundPlayed = true;
     }
@@ -426,7 +426,7 @@ function triggerConfetti() {
 }
 
 // Pré-carregar o som
-const audio = new Audio('hhttps://novidadesdigital.pages.dev/TIKTOK2/venda/venda/cash.mp3');
+const audio = new Audio('hhttps://novidadesdigital.pages.dev/TIKTOK2');
 audio.preload = 'auto';
 
 // Adicionar evento de clique ao botão "Continuar"
