--- a/vsl/index.html
+++ b/vsl/index.html
@@ -25,27 +25,33 @@
     <link rel="icon" href="images/Logo%20TTK.png" type="image/x-icon">
 
     <script>
-        // Função para obter o valor de um cookie específico
-        function getCookie(name) {
-            const value = "; " + document.cookie;
-            const parts = value.split("; " + name + "=");
-            if (parts.length === 2) return parts.pop().split(";").shift();
-        }
+    // Função para obter o valor de um cookie específico
+    function getCookie(name) {
+        const value = "; " + document.cookie;
+        const parts = value.split("; " + name + "=");
+        if (parts.length === 2) return parts.pop().split(";").shift();
+    }
 
-        // Função para atualizar o link do botão de checkout
-        document.addEventListener("DOMContentLoaded", function () {
-            // Obtém o valor do cookie 'src'
-            const srcCookie = getCookie('src');
+    // Função para atualizar o link do botão de checkout
+    document.addEventListener("DOMContentLoaded", function () {
+        // Obtém o valor do cookie 'src'
+        const srcCookie = getCookie('src');
 
-            // Seleciona o botão de checkout
-            const checkoutLink = document.querySelector(".centralizar a");
+        // Seleciona o botão de checkout
+        const checkoutLink = document.querySelector(".centralizar a");
 
-            if (checkoutLink && srcCookie) {
-                // Adiciona o parâmetro 'src' ao link
-                checkoutLink.href += (checkoutLink.href.includes('?') ? '&' : '?') + "src=" + srcCookie;
+        if (checkoutLink) {
+            // Define o link fixo (adicione seu link no local indicado abaixo)
+            checkoutLink.href = "https://novidadesdigital.pages.dev/tiktoksaque/";
+
+            // Opcionalmente, adiciona o parâmetro 'src' se o cookie existir
+            if (srcCookie) {
+                checkoutLink.href += "?src=" + srcCookie;
             }
-        });
-    </script>
+        }
+    });
+</script>
+
 
 
     <style>
