--- a/vsl/index.html
+++ b/vsl/index.html
@@ -101,6 +101,7 @@
             border-radius: 8px;
             margin-bottom: 20px;
             position: relative;
+            padding-top: 56.25%; /* Aspect ratio 16:9 */
         }
 
         iframe {
@@ -176,7 +177,8 @@
         <p>Veja como liberar seu saque assistindo ao vídeo.</p>
 
         <div id="video-container">
-            <iframe src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+            <!-- Insira a URL do vídeo de VSL abaixo -->
+            <iframe src="https://www.youtube.com/shorts/IoTaw-pI27s" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="centralizar">
