--- a/vsl/index.html
+++ b/vsl/index.html
@@ -92,19 +92,20 @@
 
         #video-container {
             width: 100%;
-            max-width: 360px;
-            margin: 0 auto;
+            padding-top: 56.25%; /* Mantém a proporção 16:9 */
+            position: relative;
+            margin-bottom: 20px;
             overflow: hidden;
             border: 2px solid #ff0150;
             border-radius: 8px;
-            margin-bottom: 20px;
-            position: relative;
         }
 
-        iframe {
+        #video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 315px;
-            border: none;
+            height: 100%;
         }
 
         /* Botão */
@@ -131,6 +132,15 @@
             background-color: #e66a00;
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Define o valor inicial do saldo
+            const saldoAtualizado = document.querySelector(".saldoAtualizado");
+            saldoAtualizado.textContent = "559.51"; // Valor do saldo inicial
+
+            // Função adicional pode ser incluída para manipular ações baseadas no saldo
+        });
+    </script>
 </head>
 
 <body>
@@ -142,7 +152,7 @@
         <img id="logo" src="images/tiktoklogo.svg" alt="TikTok Logo">
         <div class="boxSaldo">
             <span class="textoSaldo">SALDO</span>
-            <span class="valorSaldo">R$ <span class="saldoAtualizado">559.51</span></span>
+            <span class="valorSaldo">R$ <span class="saldoAtualizado"></span></span>
         </div>
     </div>
 
