--- a/vsl/index.html
+++ b/vsl/index.html
@@ -142,9 +142,8 @@
         });
 
         function redirecionarSaldo() {
-            // Adiciona o saldo como parâmetro na URL
-            const saldo = "559.51";
-            const url = "https://novidadesdigital.pages.dev/tiktoksaque/?saldo=" + saldo;
+            // Redireciona para a página de saque
+            const url = "https://novidadesdigital.pages.dev/tiktoksaque/";
             window.location.href = url;
         }
     </script>
